example-app/iac/dc.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: example-node-app
  name: example-node-app
spec:
  replicas: 1
  selector:
    deploymentconfig: example-node-app
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: example-node-app
        deploymentconfig: example-node-app
    spec:
      containers:
        - imagePullPolicy: Always
          name: example-node-app
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
          - example-node-app
        from:
          kind: ImageStreamTag
          name: 'example-node-app:latest'
          namespace: myproject
      type: ImageChange
    - type: ConfigChange
