example-app/iac/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: example-node-app
  name: example-node-app
spec:
  clusterIP: 172.30.50.103
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    deploymentconfig: example-node-app
  sessionAffinity: None
  type: ClusterIP
