example-app/iac/route.yml
apiVersion: v1
kind: Route
metadata:
  labels:
    app: example-node-app
  name: example-node-app
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: example-node-app
    weight: 100
  wildcardPolicy: None
